docs(text-color): :memo: corrects the contrast issue reported by lighthouse by adding more contrasted color to be legible on both light and dark mode

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -21,7 +21,8 @@
   --bg-color: #FAFAF9;
   --link-color: #4A4A4A;
   --heading-color: #1A1A1A;
-  --text-color: #7A7A7A;
+  /* --text-color: #7A7A7A; */
+  --text-color: #595959;
   --muted-color: rgba(0,0,0,0.3);
 
 }
@@ -32,7 +33,8 @@
   --bg-color: #34322D;
   --link-color: #C9C8C5;
   --heading-color: #F8F8F7;
-  --text-color: #858481;
+  --text-color: #B6B5B2;
+  /* --text-color: #858481; */
   --muted-color: rgba(133,132,129,0.47);
   }
 }
